<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="banner_ad_unit_id">ca-app-pub-0966333701823765/6475213593</string>
    <string name="app_name">南京实时公交</string>
    <string name="username_hit">用户名</string>
    <string name="password_hit">用户密码</string>
    <!-- ReLogin/login/register界面中使用到的字符串 -->
    <string name="change_user_btn">切换账号</string>
    <string name="register">注册</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
    <string name="nickname_not_null_toast">昵称不能为空</string>
    <string name="password_not_null_toast">密码不能为空</string>
    <string name="password_length_illegal">密码长度要在4-128个字节之间</string>
    <string name="password_same_to_previous">不能和原密码相同，请输入新密码</string>
  <string name="everypush"><u>更新全部站点数据</u></string>
    
    <string name="select_friend_title">选择朋友</string>
    <string name="selected_num">(%s)</string>

    <!--设置相关-->
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="sign">个性签名</string>
    <string name="commit">确认</string>
    <string name="confirm">确定</string>
    <string name="finish">完成</string>
    <string name="upload_avatar_title">请选择上传头像方式</string>
    <string name="setting">设置</string>
    <string name="login_out">退出登录</string>
    <string name="about">关于</string>
    <string name="demo_version_name">demo版本号:%s</string>
    <string name="sdk_version">\nsdk版本号:</string>
    <string name="about_date">\n3月1日</string>
    <string name="add_to_friend">加为好友</string>
    <string name="setting_username_hit">昵称</string>
    <string name="setting_username_big_hit">更改名字</string>
    <string name="reset_nickname_hint">好名字可以让你的朋友更加容易记住你。</string>
    <string name="note_name">备注名</string>
    <string name="description">描述</string>
    <string name="setting_location_hit">地区</string>
    <string name="input_location_title">输入地区</string>
    <string name="input_area_error">请输入您所在的地区</string>
    <string name="setting_location_big_hit">修改地区</string>
    <string name="setting_signature_hit">个信签名</string>
    <string name="input_signature_toast">请输入您的个性签名</string>
    <string name="edit_signature_title">编辑个性签名</string>
    <string name="edit_signature_count">30</string>
    <string name="edit_friend_info_count">200</string>
    <string name="save">保存</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="unknown">未知</string>
    <string name="change_password">修改密码</string>
    <string name="change_pwd_tip">修改密码前请输入原密码</string>
    <string name="input_password_error_toast">输入密码错误，请重新输入</string>
    <string name="change_password_title">设置密码</string>
    <string name="change_old_password_hit">原密码</string>
    <string name="password">密码</string>
    <string name="hint_reset_password">请设置登录密码</string>
    <string name="hint_confirm_password">请再次输入</string>
    <string name="confirm_password">确认密码</string>
    <string name="change_password_hit">填写密码</string>
    <string name="change_password_re_hit">再次填写密码</string>
    <string name="password_not_match_toast">两次输入的密码不一致</string>
    <string name="password_change_success_toast">修改成功，请牢记新密码</string>
    <string name="add_to_blacklist">加入黑名单</string>
    <string name="add_to_blacklist_success_hint">成功加入黑名单</string>
    <string name="remove_from_blacklist_hint">已从黑名单移除</string>
    <string name="new_msg_remind_hit">新消息提醒</string>
    <string name="receive_new_msg_notification_hit">接收新消息通知</string>
    <string name="receive_new_msg_vibration_hit">震动</string>
    <string name="receive_new_msg_voice_hit">声音</string>
    <string name="background_msg_remind_time">后台消息免打扰时段</string>
    <string name="dnd_sub_hit">勿扰模式</string>
    <string name="all_day_remind_hit">全天提醒</string>
    <string name="close_all_day_remind">关闭全天提醒后，消息只在设定时间内提醒</string>
    <string name="disturb_description">开启后，在设定时间段内收到新消息将不会响铃或震动</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="logout_confirm">确定退出登录？</string>


    
    <string name="action_settings">Settings</string>
    <string name="loadingtext">loading...</string>
    <string name="titletext">南京实时公交</string>
    <string name="cyclebar">南京148路</string>
    <string name="allDerection">所有线路</string>
   <string name="allStation">选择站点</string>
    <string name="waitingStation">候车站点:</string>
       <string name="curLine">当前线路:</string>
    <string name="empty"></string>
    <string name="derectionTitle">行车方向 :</string>
    
      <string name="linenameprompt"> 在此输入线路名称 如（701）</string>
         <string name="tochat">去聊天:</string>
     <string name="interval">数据刷新加快(重启生效):</string>
	<string name="noticePre">提前2站提醒:</string>
    <!-- 版本更新信息 -->
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">软件优化</string>
    <string name="soft_update_updatebtn">省流量更新</string>
    <string name="soft_update_later">下次更新</string>
    <string name="soft_updating">应用更新中</string>
        <string name="dara_updating">线路数据更新中</string>
    <string name="soft_update_cancel">取消更新</string>
    <string name="soft_update_no">软件更新版本号</string>
    <string name="main_home">当前线路</string>
    <string name="main_news">所有线路</string>
    <string name="main_my_info">常用线路</string>
    <string name="menu_search">其他线路</string>
    <string name="more">互动频率</string>
 <string name="resour">本软件信息来源: 223.112.2.69:5902 and testbk.jstv.com   反馈q群432832945</string>
        <string name="autore">自动刷新</string>
        <string name="menure">手动刷新</string>
</resources>

