<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:ads="http://schemas.android.com/apk/res-auto"  
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/whole_bg"
        android:id="@+id/HomeActivity"
    tools:context=".HomeActivity" >


    
    <!-- title bar -->
  <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/jpush_blue"
         android:id="@+id/titlebar_id"
               android:paddingLeft="5dp"
           android:paddingRight="5dp"
        >

         <ImageView
	             android:id="@+id/titlebar_back_id"
               android:layout_width="@dimen/title_menu_width"
            android:layout_height="@dimen/title_menu_hright"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/back_btn"
            android:background="@drawable/back_btn_bg" />
        <TextView 
            android:id="@+id/textviewx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
         	android:text="@string/titletext"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:textSize="20sp"/>
        
      
      
      
 <ImageView
	           	android:id="@+id/icon_refreash"
                   android:layout_width="@dimen/title_menu_hright"
            android:layout_height="@dimen/title_menu_39"
            android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/chat_detail"
                android:background="@drawable/back_btn_bg"  />

    </RelativeLayout>
    
  

	
	   <LinearLayout
        android:id="@+id/lineSelector"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/titlebar_id"
        android:orientation="horizontal" 
        android:background="@drawable/itemborder"
        android:clickable="true"
        >

        <TextView
            android:gravity="center"
            android:id="@+id/lineSelectorTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:paddingLeft="5dp"
            android:text="@string/curLine"
            android:textColor="#000000" />
        <TextView
              android:gravity="center"
            android:id="@+id/lineSelectorText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:paddingLeft="5dp"
            android:textColor="#000000" />
       <ImageView
	            android:layout_width="0dp"
    	        android:layout_height="20dp"
    	        android:layout_centerVertical="true"
        	    android:layout_weight="0.2"
				android:layout_gravity="center"
                android:contentDescription="@string/empty"
                android:src="@drawable/arrow" />
    </LinearLayout>
	 
    <LinearLayout
        android:clickable="true"
        android:id="@+id/derectionChange"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/lineSelector"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/itemborder"
        android:orientation="horizontal"
        
         >
        <TextView
            android:gravity="center"
            android:id="@+id/derectionTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:paddingLeft="5dp"
            android:text="@string/derectionTitle"
            android:textColor="#000000" />
        <TextView
              android:gravity="center"
            android:id="@+id/derectionText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:paddingLeft="5dp"
            android:textColor="#000000" />
            <ImageView
	            android:layout_width="0dp"
    	     android:layout_height="20dp"
    	        android:layout_centerVertical="true"
        	    android:layout_weight="0.2"
        	    android:layout_gravity="center"
                android:contentDescription="@string/empty"
                android:src="@drawable/icon_6" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/waitingStation"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/derectionChange"
        android:orientation="horizontal" 
        android:background="@drawable/itemborder"
        android:clickable="true"
        >

        <TextView
            android:gravity="center"
            android:id="@+id/waitingStationTitle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:paddingLeft="5dp"
            android:text="@string/waitingStation"
            android:textColor="#000000" />

        <TextView
              android:gravity="center"
            android:id="@+id/waitingStationText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:paddingLeft="5dp"
            android:textColor="#000000" />
       <ImageView
	            android:layout_width="0dp"
    	       android:layout_height="20dp"
    	        android:layout_centerVertical="true"
        	    android:layout_weight="0.2"
				android:layout_gravity="center"
                android:contentDescription="@string/empty"
                android:src="@drawable/arrow" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/ads"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/waitingStation"
        android:orientation="horizontal" 
        android:background="@drawable/itemborder"
        android:clickable="true"
        >
        <TextView  
	    android:id="@+id/astxt"  
	    android:layout_width="fill_parent"  
	    android:layout_height="30dp"  
	    android:clickable="true"
	    android:background="#ffffff"
	    android:text="@string/everypush"  
	    android:textSize="10pt"
	    android:textColor="#000000"
		android:autoLink="all"  
		android:gravity="center"
		android:textAlignment="center"
	    >  
	</TextView>  
         

    </LinearLayout>
       <LinearLayout
        android:id="@+id/nodata"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ads"
        android:orientation="horizontal" 
        android:background="@drawable/itemborder"
        android:clickable="true"
        >
        <TextView
            android:id="@+id/noDataText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:gravity="center"
          	android:layout_gravity="center_horizontal"
            android:textColor="#ff6600" />
    </LinearLayout>
    <LinearLayout
           android:id="@+id/listViewLayOut"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/nodata"
        android:orientation="horizontal" >
        <ListView
            android:cacheColorHint="#00000000"
            android:id="@+id/ListView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
             android:id="@+id/waitingStation11111"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
    	 android:layout_alignParentBottom="true" 
    	  android:layout_marginBottom="60dp"
android:orientation="horizontal"
        >


	  
     <Button
         android:id="@+id/refauto"
   android:layout_weight="50"
   android:layout_width="wrap_content"
android:layout_height="35dp"
     android:text="@string/autore"
       android:textColor="@color/white"
        android:background="@drawable/button_ref" 
 />
      <Button
              android:id="@+id/refmenu"
             android:layout_weight="50"
android:layout_width="wrap_content"
android:layout_height="35dp"
    android:text="@string/menure"
        android:textColor="@color/white"
        android:background="@drawable/button_ref" 
/>
 
    </LinearLayout>

	<com.google.android.gms.ads.AdView
		android:id="@+id/ad_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		ads:adSize="BANNER"
		android:layout_marginBottom="0dp"
		ads:adUnitId="@string/banner_ad_unit_id" />


</RelativeLayout>